TEST: cleanup gitlab CI config file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,48 +2,50 @@
 # For convenience, implicit stages have been made explicit here...
 stages:
   - Initialization
-  - Configurations
+  - Regular Installation
   - Basic Testing
   - Regular Testing
   - Benchmarks
   - Applications
   - Breaking tests
+  - Configurations
   - Finalization
 
 # Add clone variables for concurent PIPELINES
 variables:
-  GIT_DEPTH: 10 # No need to clone the whole history
-  GIT_CLONE_PATH: $CI_BUILDS_DIR/$CI_RUNNER_ID/$CI_CONCURRENT_ID/$CI_PROJECT_PATH
-  # PCVS CONF
-  PCVS_COMMAND: pcvs -v run -f -p mpc
-
+  GL_PIPELINE_PATH: $CI_BUILDS_DIR/GL_$CI_PIPELINE_ID
+  GL_BUILD_DIR: $GL_PIPELINE_PATH/build
+  GL_INSTALL_DIR: $GL_PIPELINE_PATH/install
+  GIT_DEPTH: 1 # No need to clone the whole history
+  GIT_CLONE_PATH: $GL_PIPELINE_PATH/$CI_RUNNER_ID/$CI_CONCURRENT_ID
+  PCVS_COMMAND: pcvs -v run --override --profile mpc --print errors
 
 .pcvs_prepare: &pcvs_prepare
-  - export CI_PCVS_DIR="$HOME/GL_${CI_PIPELINE_ID}/pcvs_run_$(echo $CI_JOB_NAME | sed "s/ /_/g")/"
-  - test -d "${CI_PCVS_DIR}" || mkdir "${CI_PCVS_DIR}"
+  - export CI_PCVS_DIR="$GL_PIPELINE_PATH/step_$(echo "$CI_JOB_NAME" | sed -e "s/ /_/g")/"
+  - test -d "${CI_PCVS_DIR}" && rm -rf "${CI_PCVS_DIR}"
+  - mkdir -p "${CI_PCVS_DIR}"
   - cd "${CI_PCVS_DIR}"
-  - echo "PCVS RUN Directory is ${CI_PCVS_DIR}"
-  - source $HOME/GL_$CI_PIPELINE_ID/install/mpcvars.sh
-  - echo "SOURCING MPC from $HOME/GL_$CI_PIPELINE_ID/install/mpcvars.sh"
+  - echo "Step run from ${CI_PCVS_DIR}"
+  - source ${GL_INSTALL_DIR}/mpcvars.sh
+  - echo "MPC loaded from ${GL_INSTALL_DIR}/mpcvars.sh"
 
+
+# Template nodes to be inserted to any CI step.
+# This ensure the pipeline will be triggered only for these scenarios.
+# Theses lines should never be modified.
 .run_by_main: &run_by_main
   only:
   - devel
-  - pt_devel
   - merge_requests
   - web
   except:
     variables:
+      # Skip MR tagged as WIP
       - $CI_MERGE_REQUEST_TITLE =~ /^WIP:/
-
-.breaking_tests: &breaking_tests
-  allow_failure: true
 
 .uses_slurm: &uses_slurm
   tags:
     - slurm
-
-
 
 
 ############################
@@ -60,8 +62,8 @@ Env Sanitize:
   <<: *run_by_main
   stage: Initialization
   script:
-    - mkdir -p $HOME/GL_$CI_PIPELINE_ID/{build,build_workshare,install,install_workshare,test}
-    - echo "Environment Intialized !"
+    - test -d $GL_PIPELINE_PATH && rm -rf $GL_PIPELINE_PATH
+    - mkdir -p $GL_PIPELINE_PATH
 
 # post-actions to cleanup the machine after the run
 # The last line may not be necessary as a pipeline start run something like a "git clean" before running
@@ -73,8 +75,8 @@ Artifact Deletion:
   allow_failure: true
   when: on_success
   script:
+    - rm -rf $GL_PIPELINE_PATH
     - $HOME/clean_old_pipelines.sh
-    - rm -rf $HOME/$CI_PIPELINE_ID/
 
 Resource Relinquishing:
   <<: *run_by_main
@@ -91,77 +93,102 @@ Resource Relinquishing:
 ############################
 ####### CONF STAGE  ########
 ############################
+.conf_run_cmds: &configuration_commands
+  - rm -rf ${GL_LOCAL_BUILD_DIR} ${GL_LOCAL_INSTALL_DIR}
+  - mkdir ${GL_LOCAL_BUILD_DIR}; cd ${GL_LOCAL_BUILD_DIR}
+  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=${GL_LOCAL_INSTALL_DIR} ${GL_INSTALL_OPTS}
+
+
+MPC Default Configuration:
+  <<: *run_by_main
+  stage: Regular Installation
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}
+    GL_INSTALL_OPTS: --with-slurm --mpc-option="--enable-debug"
+  script:
+    - *configuration_commands
 
 MPC Process Mode:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_nopriv
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_nopriv
+    GL_INSTALL_OPTS: --disable-mpc-autopriv
   script:
-  - mkdir $HOME/GL_$CI_PIPELINE_ID/build_nopriv/
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_nopriv/
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_process_mode --disable-mpc-autopriv
+    - *configuration_commands
 
 MPC Disable Lowcomm:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_nolowcomm
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_nolowcomm
+    GL_INSTALL_OPTS: --disable-mpc-autopriv --mpc-option="--disable-lowcomm"
   script:
-  - mkdir $HOME/GL_$CI_PIPELINE_ID/build_no_lowcomm/
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_no_lowcomm/
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_nolowcomm --disable-mpc-autopriv --mpc-option="--disable-lowcomm"
+    - *configuration_commands
 
 MPC Disable MPI:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_nompi
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_nompi
+    GL_INSTALL_OPTS: --disable-mpc-autopriv --mpc-option="--disable-mpi"
   script:
-  - mkdir $HOME/GL_$CI_PIPELINE_ID/build_nompi/
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_nompi/
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_nompi --disable-mpc-autopriv --mpc-option="--disable-mpi"
+    - *configuration_commands
 
 MPC Disable Threads:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_nothread
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_nothread
+    GL_INSTALL_OPTS: --disable-mpc-autopriv --mpc-option="--disable-threads"
   script:
-  - mkdir $HOME/GL_$CI_PIPELINE_ID/build_nothread/
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_nothread/
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_nothread --disable-mpc-autopriv --mpc-option="--disable-threads"
+    - *configuration_commands
 
 MPC Debug Messages:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_debug
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_debug
+    GL_INSTALL_OPTS: --disable-mpc-autopriv --mpc-option="--enable-debug-messages --enable-debug"
   script:
-  - mkdir $HOME/GL_$CI_PIPELINE_ID/build_debug/
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_debug/
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_debug --disable-mpc-autopriv --mpc-option="--enable-debug-messages --enable-debug"
+    - *configuration_commands
 
 MPC Slurm:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_slurm
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_slurm
+    GL_INSTALL_OPTS: --disable-mpc-autopriv --mpc-option="--with-slurm"
   script:
-  - mkdir $HOME/GL_$CI_PIPELINE_ID/build_slurm/
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_slurm/
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_slurm --disable-mpc-autopriv --mpc-option="--with-slurm"
+    - *configuration_commands
 
 MPC PMIx:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_pmix
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_pmix
+    GL_INSTALL_OPTS: --disable-mpc-autopriv --mpc-option="--with-pmix"
   script:
-  - mkdir $HOME/GL_$CI_PIPELINE_ID/build_pmix/
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_pmix/
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install_pmix --disable-mpc-autopriv --mpc-option="--with-pmix"
+    - *configuration_commands
 
 MPC Compilation Workshare:
   <<: *run_by_main
   stage: Configurations
+  variables:
+    GL_LOCAL_BUILD_DIR: ${GL_BUILD_DIR}_workshare
+    GL_LOCAL_INSTALL_DIR: ${GL_INSTALL_DIR}_workshare
+    GL_INSTALL_OPTS: --mpc-option="--enable-debug" --enable-workshare
   allow_failure: true
   script:
-  - cd $HOME/GL_$CI_PIPELINE_ID/build_workshare
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --with-slurm --prefix=$HOME/GL_$CI_PIPELINE_ID/install_workshare --mpc-option='--enable-debug' --enable-workshare
-
-MPC Default Configuration:
-  <<: *run_by_main
-  stage: Configurations
-  script:
-  - cd $HOME/GL_$CI_PIPELINE_ID/build
-  - ${CI_PROJECT_DIR}/installmpc -vv --disable-spack --prefix=$HOME/GL_$CI_PIPELINE_ID/install --with-slurm --mpc-option='--enable-debug'
+    - *configuration_commands
 
 ############################
 ####### TEST STAGE ########
@@ -221,11 +248,9 @@ Lowcomm:
     - *pcvs_prepare
     - ${PCVS_COMMAND} $HOME/repo/mpc_ci/lowcomm/
 
-
 #
 # Benchmarks
 #
-
 MPI IMB-MPI 2017:
   <<: *run_by_main
   <<: *uses_slurm
@@ -238,6 +263,7 @@ MPI IMB-NBC 2017:
   <<: *run_by_main
   <<: *uses_slurm
   stage: Benchmarks
+  allow_failure: true
   script:
     - *pcvs_prepare
     - ${PCVS_COMMAND} $HOME/repo/mpc_ci/MPI/IMB_2017/check-nbc/
@@ -267,6 +293,7 @@ NAS-MZ MPI:
   <<: *run_by_main
   <<: *uses_slurm
   stage: Applications
+  allow_failure: true
   script:
     - *pcvs_prepare
     - ${PCVS_COMMAND} $HOME/repo/mpc_ci/hybrid/NAS/MZ-MPI/
@@ -275,6 +302,7 @@ NAS-MZ OMP:
   <<: *run_by_main
   <<: *uses_slurm
   stage: Applications
+  allow_failure: true
   script:
     - *pcvs_prepare
     - ${PCVS_COMMAND} $HOME/repo/mpc_ci/hybrid/NAS/MZ-OMP/
