--- a/src/MPC_Lowcomm/src/Makefile.in
+++ b/src/MPC_Lowcomm/src/Makefile.in
@@ -118,7 +118,7 @@ host_triplet = @host@
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdma.c \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdv.c \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_toolkit.c
-@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__append_7 = ./portals/lcr_ptl.c
+@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__append_7 = ./portals/lcr_ptl.c ./portals/lcr_ptl_recv.c ./portals/lcr_ptl_iface.c
 
 # PTL-AM driver #
 @PORTALS4_DRIVER_ENABLED_TRUE@am__append_8 = ./portals_am/sctk_ptl_am_iface.c  ./portals_am/sctk_ptl_am_toolkit.c ./portals_am/sctk_ptl_am_arpc_api.c ./portals_am/arpc_weak.c
@@ -208,7 +208,8 @@ am__libmpclowcomm_la_SOURCES_DIST = coll.c comm.c sctk_checksum.c ft.c \
 	./portals/sctk_ptl_eager.c ./portals/sctk_ptl_iface.c \
 	./portals/sctk_ptl_offcoll.c ./portals/sctk_ptl_rdma.c \
 	./portals/sctk_ptl_rdv.c ./portals/sctk_ptl_toolkit.c \
-	./portals/lcr_ptl.c ./portals_am/sctk_ptl_am_iface.c \
+	./portals/lcr_ptl.c ./portals/lcr_ptl_recv.c \
+	./portals/lcr_ptl_iface.c ./portals_am/sctk_ptl_am_iface.c \
 	./portals_am/sctk_ptl_am_toolkit.c \
 	./portals_am/sctk_ptl_am_arpc_api.c ./portals_am/arpc_weak.c \
 	./ofi/ofi.c ./ofi/ofi_msg.c ./ofi/ofi_rdma.c \
@@ -243,7 +244,9 @@ am__dirstamp = $(am__leading_dot)dirstamp
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdma.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_rdv.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals/sctk_ptl_toolkit.lo
-@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_3 = ./portals/lcr_ptl.lo
+@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@am__objects_3 = ./portals/lcr_ptl.lo \
+@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@	./portals/lcr_ptl_recv.lo \
+@LCP_ENABLED_TRUE@@PORTALS4_DRIVER_ENABLED_TRUE@	./portals/lcr_ptl_iface.lo
 @PORTALS4_DRIVER_ENABLED_TRUE@am__objects_4 = ./portals_am/sctk_ptl_am_iface.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals_am/sctk_ptl_am_toolkit.lo \
 @PORTALS4_DRIVER_ENABLED_TRUE@	./portals_am/sctk_ptl_am_arpc_api.lo \
@@ -828,6 +831,10 @@ portals/$(DEPDIR)/$(am__dirstamp):
 	portals/$(DEPDIR)/$(am__dirstamp)
 ./portals/lcr_ptl.lo: portals/$(am__dirstamp) \
 	portals/$(DEPDIR)/$(am__dirstamp)
+./portals/lcr_ptl_recv.lo: portals/$(am__dirstamp) \
+	portals/$(DEPDIR)/$(am__dirstamp)
+./portals/lcr_ptl_iface.lo: portals/$(am__dirstamp) \
+	portals/$(DEPDIR)/$(am__dirstamp)
 portals_am/$(am__dirstamp):
 	@$(MKDIR_P) ./portals_am
 	@: > portals_am/$(am__dirstamp)
@@ -1009,6 +1016,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./ofi/$(DEPDIR)/ofi_rdma.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./ofi/$(DEPDIR)/ofi_toolkit.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./portals/$(DEPDIR)/lcr_ptl.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./portals/$(DEPDIR)/lcr_ptl_iface.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./portals/$(DEPDIR)/lcr_ptl_recv.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./portals/$(DEPDIR)/sctk_portals.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./portals/$(DEPDIR)/sctk_ptl_cm.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./portals/$(DEPDIR)/sctk_ptl_eager.Plo@am__quote@
