--- a/src/MPC_MPI/src/Makefile.in
+++ b/src/MPC_MPI/src/Makefile.in
@@ -150,15 +150,18 @@ am__libmpcmpi_la_SOURCES_DIST = comm_lib.c egreq_nbc.c mpc_extern32.c \
 	datatype.c egreq_progress.c mpc_info.c mpc_nbc.c \
 	mpi_rma_ctrl_msg.c mpi_conf.c mpc_coll.c session.c errh.c \
 	mgroup.c egreq_classes.c mpc_cs.c mpc_mpi.c \
-	mpc_nbc_progress_thread_binding.c mpi_rma_epoch.c fortran.c
-@MPC_FORTRAN_ENABLED_TRUE@am__objects_1 = fortran.lo
+	mpc_nbc_progress_thread_binding.c mpi_rma_epoch.c \
+	./mpi_partitioned.c fortran.c
+am__dirstamp = $(am__leading_dot)dirstamp
+@LCP_ENABLED_TRUE@am__objects_1 = ./mpi_partitioned.lo
+@MPC_FORTRAN_ENABLED_TRUE@am__objects_2 = fortran.lo
 am_libmpcmpi_la_OBJECTS = comm_lib.lo egreq_nbc.lo mpc_extern32.lo \
 	mpc_mpi_halo.lo mpc_reduction.lo mpi_rma.lo mpi_rma_win.lo \
 	mpit.lo datatype.lo egreq_progress.lo mpc_info.lo mpc_nbc.lo \
 	mpi_rma_ctrl_msg.lo mpi_conf.lo mpc_coll.lo session.lo errh.lo \
 	mgroup.lo egreq_classes.lo mpc_cs.lo mpc_mpi.lo \
 	mpc_nbc_progress_thread_binding.lo mpi_rma_epoch.lo \
-	$(am__objects_1)
+	$(am__objects_1) $(am__objects_2)
 libmpcmpi_la_OBJECTS = $(am_libmpcmpi_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -552,7 +555,7 @@ libmpcmpi_la_SOURCES = comm_lib.c egreq_nbc.c mpc_extern32.c \
 	mpi_rma_ctrl_msg.c mpi_conf.c mpc_coll.c session.c errh.c \
 	mgroup.c egreq_classes.c mpc_cs.c mpc_mpi.c \
 	mpc_nbc_progress_thread_binding.c mpi_rma_epoch.c \
-	$(am__append_6)
+	$(am__append_6) $(am__append_7)
 libmpcmpi_la_LIBADD = ../../MPC_Lowcomm/src/libmpclowcomm.la -lrt
 all: all-am
 
