--- a/src/MPC_Threads/src/Makefile.in
+++ b/src/MPC_Threads/src/Makefile.in
@@ -168,7 +168,7 @@ am__libmpcthread_la_SOURCES_DIST = sctk_context.c futex.c thread_ptr.c \
 	thread.c tls.c kthread.c microthread.c romio_ctx.c \
 	pthread_engine.c ng_engine.c ng_engine_scheduler.c \
 	ethread_engine.c ethread_mxn_engine.c ethread_posix.c \
-	accelerator.c mpi_omp_interop.c ./accelerator/cuda.c \
+	accelerator.c ./accelerator/cuda.c \
 	./accelerator/cuda_wrap.c
 @MPC_CUDA_ENABLED_TRUE@am__objects_1 = ./accelerator/cuda.lo \
 @MPC_CUDA_ENABLED_TRUE@	./accelerator/cuda_wrap.lo
@@ -176,7 +176,7 @@ am_libmpcthread_la_OBJECTS = sctk_context.lo futex.lo thread_ptr.lo \
 	thread.lo tls.lo kthread.lo microthread.lo romio_ctx.lo \
 	pthread_engine.lo ng_engine.lo ng_engine_scheduler.lo \
 	ethread_engine.lo ethread_mxn_engine.lo ethread_posix.lo \
-	accelerator.lo mpi_omp_interop.lo $(am__objects_1)
+	accelerator.lo $(am__objects_1)
 libmpcthread_la_OBJECTS = $(am_libmpcthread_la_OBJECTS)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
@@ -554,7 +554,7 @@ libmpcthread_la_SOURCES = sctk_context.c futex.c thread_ptr.c thread.c \
 	tls.c kthread.c microthread.c romio_ctx.c pthread_engine.c \
 	ng_engine.c ng_engine_scheduler.c ethread_engine.c \
 	ethread_mxn_engine.c ethread_posix.c accelerator.c \
-	mpi_omp_interop.c $(am__append_4)
+	$(am__append_4)
 @MPC_CUDA_ENABLED_TRUE@libmpc_cuda_addon_la_SOURCES = ./accelerator/cuda_lib/cuda_lib.c
 @MPC_CUDA_ENABLED_TRUE@libmpc_cuda_addon_la_LIBADD = -lcuda
 libmpcthread_la_LIBADD = ../../MPC_Launch/src/libmpclaunch.la  -lpthread
@@ -669,7 +669,6 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/futex.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/kthread.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/microthread.Plo@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/mpi_omp_interop.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ng_engine.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ng_engine_scheduler.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/pthread_engine.Plo@am__quote@
